@@ -23,14 +23,13 @@ import java.util.stream.Collectors;
 
 import com.example.nexus.app.user.domain.User;
 import com.example.nexus.app.user.repository.UserRepository;
-import com.example.nexus.app.mypage.service.RecentViewedPostService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-import java.util.Optional;
+
 import java.util.List;
 
 @Service
@@ -48,7 +47,6 @@ public class PostService {
     private final PostUserStatusService postUserStatusService;
     private final ViewCountService viewCountService;
     private final UserRepository userRepository;
-    private final RecentViewedPostService recentViewedPostService;
 
     @Transactional
     public Long createPost(PostCreateRequest request, MultipartFile thumbnailFile, CustomUserDetails userDetails) {
@@ -113,11 +111,6 @@ public class PostService {
 
         if (incrementView && post.isActive()) {
             viewCountService.incrementViewCount(postId);
-        }
-
-        // 로그인된 사용자가 있을 경우 조회 기록 저장
-        if (userId != null) {
-            recentViewedPostService.saveRecentView(userId, post);
         }
 
         PostUserStatusService.PostUserStatus status = postUserStatusService.getPostUserStatus(postId, userId);
@@ -289,8 +282,9 @@ public class PostService {
     }
 
     private Post getPostWithDetail(Long postId) {
-        return postRepository.findByIdWithAllDetails(postId)
+        Post post = postRepository.findByIdWithAllDetails(postId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.POST_NOT_FOUND));
+        return post;
     }
 
     private Post createPostWithThumbnail(PostCreateRequest request, MultipartFile thumbnailFile, PostStatus status) {
@@ -352,7 +346,7 @@ public class PostService {
                     return categoryMatch && rewardMatch;
                 })
                 .limit(limit)
-                .toList();
+                .collect(Collectors.toList());
 
         return similarPosts.stream()
                 .map(SimilarPostResponse::from)
@@ -369,8 +363,9 @@ public class PostService {
         }
 
         Long createdByUserId = post.getCreatedBy();
-        Optional<User> creatorUser = userRepository.findById(createdByUserId);
+        User creatorUser = userRepository.findById(createdByUserId)
+                .orElseThrow(() -> new GeneralException(ErrorStatus.USER_NOT_FOUND));
 
-        return PostRightSidebarResponse.from(post, creatorUser.orElse(null));
+        return PostRightSidebarResponse.from(post, creatorUser);
     }
 }
